Fixed responsiveness, card-sizing and content alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,10 +14,9 @@
  *= require_self
  *
  *= stub events_new.css
+ *= stub events_index.scss
  *= stub chefs_show.css
  */
-
-// Flatpickr available themes are: airbnb, base16_flat, confetti, dark, material_blue, material_green, material_orange, material_red.
 
 @import "bootstrap";
 
@@ -33,4 +32,84 @@ body, html {
 // h1, a {
 // 	font-family: 'Acme', sans-serif;
 // }
+
+.card {
+	opacity: 0.8;
+}
+
+.card:hover {
+  opacity: 1;
+}
+
+#footer {
+	width: 100%;
+	background: black !important;
+}
+
+#footer a {
+  color: #ffffff;
+  text-decoration: none !important;
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects;
+}
+
+#footer ul.social li{
+	padding: 3px 0;
+}
+
+#footer ul.social li a i {
+  margin-right: 5px;
+	font-size:25px;
+	-webkit-transition: .5s all ease;
+	-moz-transition: .5s all ease;
+	transition: .5s all ease;
+}
+
+#footer ul.social li:hover a i {
+	font-size:30px;
+	margin-top:-10px;
+}
+
+#footer ul.social li a,
+#footer ul.quick-links li a{
+	color:#ffffff;
+}
+
+#footer ul.social li a:hover{
+	color:#eeeeee;
+}
+
+#footer ul.quick-links li{
+	padding: 3px 0;
+	-webkit-transition: .5s all ease;
+	-moz-transition: .5s all ease;
+	transition: .5s all ease;
+}
+
+#footer ul.quick-links li:hover{
+	padding: 3px 0;
+	margin-left:5px;
+	font-weight:700;
+}
+
+#footer ul.quick-links li a i{
+	margin-right: 5px;
+}
+
+#footer ul.quick-links li:hover a i {
+    font-weight: 700;
+}
+
+#linkedin {
+	float: left;
+}
+
+#logo {
+	float: right;
+}
+
+// #appname {
+// 	margin-right: 30px;
+// }
+
 
